Remove deprecated API